@@ -50,7 +50,7 @@ public class InitialContextFactory {
      */
     public static Context lookupContext(String initialContextFactory,
             String providerUrl, boolean useAuth, String securityPrincipal, String securityCredentials) throws NamingException {
-        String cacheKey = createKey(Thread.currentThread().getId(),initialContextFactory ,providerUrl, securityPrincipal, securityCredentials);
+        String cacheKey = createKey(Thread.currentThread().threadId(),initialContextFactory ,providerUrl, securityPrincipal, securityCredentials);
         Context ctx = MAP.get(cacheKey);
         if (ctx == null) {
             Properties props = new Properties();
